@@ -15,6 +15,7 @@
 	- python: permit rpm.ds() analogue to hdr.dsFromHeader() creator.
 	- python: permit rpm.fi() analogue to hdr.fiFromHeader() creator.
 	- silently add default %defattr(-,root,root) for all packages.
+	- fix: don't set handler if SIG_IGN is already set (#134474).
 
 4.3.1 -> 4.3.2:
 	- use /etc/selinux/targeted/contexts/files/file_contexts for now.
